Fix image stretching?

--- a/styles/main.css
+++ b/styles/main.css
@@ -183,6 +183,7 @@ img.heroimage {
 	display: flex;
 	flex-direction: column;
 	width: 40%;
+	height: auto;
 	border: 2px solid var(--cs-ayu-light-blue);
 }
 
@@ -203,6 +204,7 @@ img.heroimage {
 	display: flex;
 	flex-direction: column;
 	width: 85%;
+	height: auto;
 	border: 2px solid var(--cs-ayu-light-blue);
 	margin-left: auto;
 	margin-right: auto;
